adjusts routes for simulations
